@@ -1,0 +1,9 @@
+[1]
+background gray 1
+[2]
+background gray 1
+[3][4]
+background rgb 1 0 0
+
+Maximal depth of color stack:1
+Some corrections are necessary!
