@@ -1,0 +1,10 @@
+[1][2]
+pn 30
+[3][4][5]
+pn 5
+[6][7][8]
+pn 30
+[9]
+pn 30
+
+Some corrections are necessary!
